including webglfixes for matching the new layouts

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -61,7 +61,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
 				
                 <li data-type="webgl" data-id="id-7" class="thumbnail">
 					<a href="interactive/Paint/Paint.html"  class="thumbnailelement" id="paintid">
-						<img src="./interactivep/Paint/scr.png" class="miniature">
+						<img src="./interactive/Paint/scr.png" class="miniature">
 						<h4 class="list-group-item-heading">Paint (7/25/2015)</h4>
 						<p class="list-group-item-text">Simplistic Paint example using WebGL</p>
 					</a>
