--- a/Portfolio/interactive/Paint/Paint.html
+++ b/Portfolio/interactive/Paint/Paint.html
@@ -1,13 +1,11 @@
-﻿---
-layout: default
-title: VacunaC (Java, MySQL)
-keywords: java, mysql
----
-    <link rel="stylesheet" type="text/css" href="../../../css/main.css">
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <title>Paint</title>
 
     <script id="vertex-shader" type="x-shader/x-vertex">
         attribute vec4 vPosition;
-
         void
         main()
         {
@@ -16,7 +14,6 @@ keywords: java, mysql
     </script>
     <script id="fragment-shader" type="x-shader/x-fragment">
         precision mediump float;
-
         uniform vec4 color;
         void
         main()
@@ -29,8 +26,47 @@ keywords: java, mysql
     <script type="text/javascript" src="../Common/MV2.js"></script>
     <script type="text/javascript" src="Paint.js"></script>
     <script type="text/javascript" src="../Common/jscolor/jscolor.js"></script>
+	
+	    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-   
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="/css/generalformat.css">
+    <link href="/css/carousel.css" rel="stylesheet">
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+
+
+	
+</head>
+<body>
+        <header class="navbar-wrapper">
+        <div class="container">
+
+            <nav class="navbar navbar-inverse navbar-static-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/index.html">Orlando</a>
+                    </div>
+                    <div id="navbar" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="/Resume/Resume.html">Resume</a></li>
+                            <li><a href="/Portfolio/Portfolio.html">Portfolio</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+    </header>
+
+    <div class="container">
     <h1>Paint</h1>
 
     <canvas id="gl-canvas" width="512" height="512">
@@ -44,10 +80,18 @@ keywords: java, mysql
                 Brush color: <input class="color" value="66ff00" id="colorPicker">
             </div>
             <div>
-                Brush thickness: 1<input id="thicknesSlider" type="range"
+                Brush thickness: <input id="thicknesSlider" type="range"
                               min="1" max="30" step="1" value="10" />
-                30
+                
             </div>
         </fieldset>
     </form>
-
+      </div>
+    <footer class="footer">
+        <ul>
+            <li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
+            <li><a href="https://github.com/OrlandoAguilar">github.com/OrlandoAguilar</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
