--- a/Portfolio/interactive/particles/Particles.html
+++ b/Portfolio/interactive/particles/Particles.html
@@ -13,7 +13,6 @@
         -->
 
     <title>Particles and instance</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/main.css">
     <link rel="stylesheet" href="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.css">
 
     <script id="vertex-shader" type="x-shader/x-vertex">
@@ -89,17 +88,45 @@
     <script type="text/javascript" src="../Common/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../Common/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
 
+		    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="/css/generalformat.css">
+    <link href="/css/carousel.css" rel="stylesheet">
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+
+	
 </head>
 <body>
-    <div class="header">
-        <nav>
-            <ul>
-                <li><a href="../../../index.html">Home</a></li>
-                <li><a href="../../../Resume/Resume.html">Resume</a></li>
-                <li><a href="../../Portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-    </div>
+       <header class="navbar-wrapper">
+        <div class="container">
+
+            <nav class="navbar navbar-inverse navbar-static-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/index.html">Orlando</a>
+                    </div>
+                    <div id="navbar" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="/Resume/Resume.html">Resume</a></li>
+                            <li><a href="/Portfolio/Portfolio.html">Portfolio</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+    </header>
+
+    <div class="container">
     <h1>Particles and instance</h1>
 
     <canvas id="gl-canvas" width="512" height="512">
@@ -113,7 +140,8 @@
 </fieldset>
     </div>
 
-    <footer>
+  </div>
+    <footer class="footer">
         <ul>
             <li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
             <li><a href="https://github.com/OrlandoAguilar">github.com/OrlandoAguilar</a></li>
