--- a/Portfolio/Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html
+++ b/Portfolio/Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html
@@ -3,7 +3,7 @@ layout: default
 title: Component based Game Engine and Videogame (OpenGL, WinAPI, C++)
 keywords: programmer, games, graphics, c++, opengl
 ---
-
+<link href="/css/mouseinteraction.css" rel="stylesheet">
 
     <center>
         <div class="videoWrapper">
@@ -30,7 +30,16 @@ keywords: programmer, games, graphics, c++, opengl
     <p>Some screenshots.</p>
 
     <center>
-        <img src="map1.png" alt="First Experiment" style="width:512px;height:288px;">
-        <img src="map2.png" alt="Second Experiment" style="width:512px;height:288px;">
-        <img src="map3.png" alt="Third Experiment" style="width:512px;height:288px;">
+        <img class="interactive" src="map1.png" alt="First Experiment" style="width:512px;height:288px;" id="sc1">
+        <img class="interactive" src="map2.png" alt="Second Experiment" style="width:512px;height:288px;" id="sc2">
+        <img class="interactive" src="map3.png" alt="Third Experiment" style="width:512px;height:288px;" id="sc3">
     </center>
+
+	<script src="/js/bootbox.min.js"></script>
+	
+	<script> 
+		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="map1.png" style="width: 100%;">'}); });
+		 $('#sc2').click(function() { bootbox.alert({size: 'large', message:'<img src="map2.png" style="width: 100%;">'}); });
+		 $('#sc3').click(function() { bootbox.alert({size: 'large', message:'<img src="map3.png" style="width: 100%;">'}); });
+		 
+	</script>
