change of video in hdr rendering

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -5,6 +5,12 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
 ---
 <div class="container"  >
 	
+	<center>
+		<h2>HDR, Deferred shading, Exponential shadow maps, Ambient occlusion and glares</h2>
+        <div class="videoWrapper">
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/HvTUKYgGU2A" frameborder="0" allowfullscreen></iframe>
+        </div><!-- /.container -->
+    </center>
 	
 	<center>
 		<h2>Skinning, Inverse kinematics and more...</h2>
@@ -13,12 +19,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
         </div><!-- /.container -->
     </center>
 	
-	<center>
-		<h2>HDR, Deferred shading, Exponential shadow maps, Ambient occlusion and glares</h2>
-        <div class="videoWrapper">
-			<iframe width="854" height="480" src="https://www.youtube.com/embed/BYHmy5Ke_qY" frameborder="0" allowfullscreen></iframe>
-        </div><!-- /.container -->
-    </center>
+
 	
 
 	
