images in the index

--- a/Portfolio/Projects/Orly/Orly.html
+++ b/Portfolio/Projects/Orly/Orly.html
@@ -38,7 +38,7 @@ keywords: programmer, games, graphics, image processing, oculus
 	<script src="/js/bootbox.min.js"></script>
 	
 	<script> 
-		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="sc1.png" style="width: 100%;">'}); });
-		 $('#sc2').click(function() { bootbox.alert({size: 'large', message:'<img src="sc2.png" style="width: 100%;">'}); });
+		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="sc1.png" style="width: 100%;" class="img-rounded" >'}); });
+		 $('#sc2').click(function() { bootbox.alert({size: 'large', message:'<img src="sc2.png" style="width: 100%;" class="img-rounded" >'}); });
 	</script>
 	
