--- a/index.html
+++ b/index.html
@@ -12,12 +12,50 @@ keywords: programmer, games, graphics, image processing, oculus
 <p>
 	I have also published recently an article in IEEE entitled <a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7222843&filter%3DAND(p_IS_Number%3A7222827)">Characterization of Nanotube Structures Using Digital-Segmented Images</a>, about using image processing to measure the thickness of nanotubes.
 </p>
+
 <p>
-	I have successfully applied image processing techniques to video games in graphics.
+	Last semester I had the oportunity to work in a new video games which uses oculus. 
+	I was the platform engineer in this project, working with the Oculus integration using the C++ SDK, 
+	the user experience as a game designer, level design with an Oculus development in mind, the Windows System, 
+	Particle System and the Scripting System using LUA, with automatic reloading of scripts in real time (on debug) for faster development. 
 </p>
+
 <p>
-	Currently I am working in a new video games which uses oculus. I am the platform engineer in this project, working with the Oculus integration using the C++ SDK, the user experience as a game designer, level design with an Oculus development in mind, the Windows System, Particle System and the Scripting System using LUA, with automatic reloading of scripts in real time (on debug) for faster development. 
+This semester I am working on a platform game using Unreal Engine 4. I am the graphics programmer, developing every single material and even some of the 3D models using blender.
+For this role, I have experimented with procedural textures, postprocessing for outline effects and other cool effects for the graphics. 
 </p>
 <p>Personally, I enjoy working hard, making video games, researching and getting along with everyone.</p>
+
+<link href="/css/mouseinteraction.css" rel="stylesheet">
+
+<center  >
+<div class="col">
+  <div class="row-md-6">
+  <div class="interactive">
+	  <img  src="scr1.png" alt="Unreal Project" style="width:637px;height:325px;"   data-id="id-1" id="sc1"  class="img-rounded" >
+	  </div>
+		<p>Screenshot of my latest game, developed in UE4. I am the graphics programmer.</p>
+  </div>
+  <div class="row-md-6">
+  <div class="interactive">
+        <img   src="scr2.png" alt="Personal Engine" style="width:638px;height:298px;"   data-id="id-2" id="sc2"  class="img-rounded" >
+		</div>
+		<p>Screenshot of my own Graphics Engine using OpenGL. You can find more of the projects in my <a href="/Portfolio/Portfolio.html">Portfolio.</a></p>
+  </div>
+
+</div>
+</center>
+
+<script src="/js/bootbox.min.js"></script>
+	
+	<script> 
+		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="scr1.png" style="width: 100%;" class="img-rounded">'}); });
+		 $('#sc2').click(function() { bootbox.alert({size: 'large', message:'<img src="scr2.png" style="width: 100%;" class="img-rounded">'}); });
+	</script>        
+	
+		
+
+		
+
 
 <p><a href="https://www.linkedin.com/in/orlandoaguilarvivanco">Go to my LinkedIn profile.</a></p>
