capital O in Index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ keywords: programmer, games, graphics, image processing, oculus
 </p>
 
 <p>
-	Last semester I had the oportunity to work in a new video games which uses oculus. 
+	Last semester I had the oportunity to work in a new video games which uses Oculus. 
 	I was the platform engineer in this project, working with the Oculus integration using the C++ SDK, 
 	the user experience as a game designer, level design with an Oculus development in mind, the Windows System, 
 	Particle System and the Scripting System using LUA, with automatic reloading of scripts in real time (on debug) for faster development. 
