addig wave equation video

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -27,6 +27,14 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
             </div><!-- /.container -->
         </center>
 
+		<center>
+            <h2>Solution of Wave Equation using Finite Differences</h2>
+            <div class="videoWrapper">
+                <iframe width="854" height="480" src="https://www.youtube.com/embed/_RhFVzCJzkg" frameborder="0" allowfullscreen></iframe>
+            </div><!-- /.container -->
+        </center>
+		
+		
         <center>
             <h2>GPU Particle System using compute shaders (Vortex (100 000 particles), Bouncing (10 000 particles) and Force Field (5000))</h2>
             <div class="videoWrapper">
