adding the blog and changing the main page

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -64,7 +64,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="projects" data-id="id-1" class="thumbnail">
                     <a href="./Projects/SkinningGraphicsEngine/GraphicsEngine.html" class="thumbnailelement" id="geid">
                         <img src="./Projects/SkinningGraphicsEngine/sc1.png" class="miniature">
-                        <h4 class="list-group-item-heading">Graphics Engine (OpenGL, C++, WinGDI)</h4>
+                        <h4 class="list-group-item-heading">Graphics Engine <br>(OpenGL, C++, WinGDI)</h4>
                         <p class="list-group-item-text">My Graphics Engine and an articulated model traveling through a path.</p>
                     </a>
                 </li>
@@ -72,13 +72,13 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="projects" data-id="id-2" class="thumbnail">
                     <a href="./Projects/Orly/Orly.html" class="thumbnailelement" id="orlyid">
                         <img src="./Projects/Orly/sc1.png" class="miniature">
-                        <h4 class="list-group-item-heading">Orly Game (Google Play)</h4>
+                        <h4 class="list-group-item-heading">Orly Game <br>(Google Play)</h4>
                         <p class="list-group-item-text">Google Play Game, using accelerometer and physics to deliver an attractive experience. Developed using Unity 3D.</p>
                     </a>
                 </li>
                 <li data-type="projects" data-id="id-3" class="thumbnail">
                     <a href="Projects/SignalsSlots/SignalsSlots.html" class="thumbnailelement" id="sasid">
-                        <h4 class="list-group-item-heading">Signals and Slots (C++ implementation)</h4>
+                        <h4 class="list-group-item-heading">Signals and Slots <br>(C++ implementation)</h4>
                         <p class="list-group-item-text">Minimalistic Signals and Slots implementation using only standard C++.</p>
                     </a>
                 </li>
@@ -99,7 +99,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="webgl" data-id="id-4" class="thumbnail">
                     <a href="interactive/particles/Particles.html" class="thumbnailelement" id="particlesId">
                         <img src="./interactive/particles/scr.png" class="miniature">
-                        <h4 class="list-group-item-heading">Particles and instancing(8/29/2015)</h4>
+                        <h4 class="list-group-item-heading">Particles and instancing <br>(8/29/2015)</h4>
                         <p class="list-group-item-text">Interactive example of particles using instancing</p>
                     </a>
                 </li>
@@ -107,7 +107,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="webgl" data-id="id-5" class="thumbnail">
                     <a href="interactive/Texturization/Texturization.html" class="thumbnailelement" id="textid">
                         <img src="./interactive/Texturization/scr.png" class="miniature">
-                        <h4 class="list-group-item-heading">Texturization and BRDF(8/23/2015)</h4>
+                        <h4 class="list-group-item-heading">Texturization and BRDF <br>(8/23/2015)</h4>
                         <p class="list-group-item-text">Interactive example of BRDF and vertex animation</p>
                     </a>
                 </li>
@@ -115,7 +115,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="webgl" data-id="id-6" class="thumbnail">
                     <a href="interactive/EPA/EPA.html" class="thumbnailelement" id="epaid">
                         <img src="./interactive/EPA/scr.png" class="miniature">
-                        <h4 class="list-group-item-heading">GJK and EPA algorithm(8/11/2015)</h4>
+                        <h4 class="list-group-item-heading">GJK and EPA algorithm <br>(8/11/2015)</h4>
                         <p class="list-group-item-text">Interactive example of collision detection and resolution information calculation</p>
                     </a>
                 </li>
@@ -123,7 +123,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <li data-type="webgl" data-id="id-7" class="thumbnail">
                     <a href="interactive/Paint/Paint.html" class="thumbnailelement" id="paintid">
                         <img src="./interactive/Paint/scr.png" class="miniature">
-                        <h4 class="list-group-item-heading">Paint (7/25/2015)</h4>
+                        <h4 class="list-group-item-heading">Paint <br>(7/25/2015)</h4>
                         <p class="list-group-item-text">Simplistic Paint example using WebGL</p>
                     </a>
                 </li>
@@ -172,7 +172,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <a href="Videos/ComponentBasedGameEngineAndGame/ComponentBasedGameEngineAndGame.html" class="thumbnailelement" id="enginid">
                     <img src="./Videos/ComponentBasedGameEngineAndGame/map1.png" class="miniature">
                     <h4 class="list-group-item-heading">Component based Game Engine and Videogame</h4>
-                    <p class="list-group-item-text">Game Engine (OpenGL, WinAPI, C++)</p>
+                    <p class="list-group-item-text">Game Engine <br>(OpenGL, WinAPI, C++)</p>
                 </a>
             </li>
             <!--
@@ -189,7 +189,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <a href="Videos/SnowballsChance/SnowallsChance.html" class="thumbnailelement" id="snowid">
                     <img src="./Videos/SnowballsChance/scr.png" class="miniature">
                     <h4 class="list-group-item-heading">Snowball's chance</h4>
-                    <p class="list-group-item-text">Videogame in custom engine (C++, OpenGl, Lua)</p>
+                    <p class="list-group-item-text">Videogame in custom engine <br>(C++, OpenGl, Lua)</p>
                 </a>
             </li>
 
@@ -197,7 +197,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <a href="Videos/Spectogram/Spectogram.html" class="thumbnailelement" id="spectroid">
                     <img src="./Videos/Spectogram/scr.png" class="miniature">
                     <h4 class="list-group-item-heading">Spectrogram</h4>
-                    <p class="list-group-item-text">Calculation of spectrogram (matlab)</p>
+                    <p class="list-group-item-text">Calculation of spectrogram <br>(matlab)</p>
                 </a>
             </li>
 
@@ -205,7 +205,7 @@ keywords: WebGL,3D,Portfolio,JavaScript,Programming,Videogames,Games,Graphics,3D
                 <a href="Videos/VacunaC/VacunaC.html" class="thumbnailelement" id="vacunaid">
                     <img src="./Videos/VacunaC/s6.png" class="miniature">
                     <h4 class="list-group-item-heading">VacunaC </h4>
-                    <p class="list-group-item-text">Database for vaccination records (Java, MySQL)</p>
+                    <p class="list-group-item-text">Database for vaccination records <br>(Java, MySQL)</p>
 
                 </a>
             </li>
