--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@ layout: default
 title: Orlando Aguilar Vivanco
 keywords: programmer, games, graphics, image processing, oculus
 ---
-<p>I am a game programmer; studying currently an MSCS at DigiPen.</p>
 
-<p>My expertise is in image processing, computer graphics and game development.</p>
+<p>I am a graphics programmer; working now in Gearbox Software.</p>
+
+<p>My expertise is in image processing, computer graphics and game development. I obtained a Master Degree in computer sciences in DigiPen Institute of Technology, and graduated as an Engineer in Electronic and Computer Sciences in Universidad de Guadalajara.</p>
+
 <p>
 	Some of my projects can be found in my <a href="/Portfolio/Portfolio.html">Portfolio</a>.
 </p>
+
 <p>
 	I have also published recently an article in IEEE entitled <a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7222843&filter%3DAND(p_IS_Number%3A7222827)">Characterization of Nanotube Structures Using Digital-Segmented Images</a>, about using image processing to measure the thickness of nanotubes.
 </p>
 
 <p>
-	Last semester I had the oportunity to work in a new video games which uses Oculus. 
-	I was the platform engineer in this project, working with the Oculus integration using the C++ SDK, 
-	the user experience as a game designer, level design with an Oculus development in mind, the Windows System, 
-	Particle System and the Scripting System using LUA, with automatic reloading of scripts in real time (on debug) for faster development. 
+	I have had the oportunity to work in projects using custom game engines, Oculus and even UE4 and Unity.
 </p>
-
-<p>
-This semester I am working on a platform game using Unreal Engine 4. I am the graphics programmer, developing every single material and even some of the 3D models using blender.
-For this role, I have experimented with procedural textures, postprocessing for outline effects and other cool effects for the graphics. 
-</p>
-<p>Personally, I enjoy working hard, making video games, researching and getting along with everyone.</p>
 
 <link href="/css/mouseinteraction.css" rel="stylesheet">
 
