changing link of dual quaternion

--- a/_posts/2016-07-04-DualQuaternion.html
+++ b/_posts/2016-07-04-DualQuaternion.html
@@ -2,7 +2,7 @@
 layout: default
 title:  "Dual Quaternion"
 date:   2016-07-04 17:35:38
-categories: quaternion, algebra, math, graphics, animation
+categories: quaternion algebra math graphics animation
 --- 
 <!-- Scripts and stuff that are not in the header-->	
 <script type="text/x-mathjax-config">
